# bbcheck

./: .travis.yml  Dockerfile  README.md  bbcheck.cabal  build  service.cfg  service.prod.cfg  stack.yaml
docker/: Dockerfile-build  Dockerfile-run
src/: Main.hs  Server.hs  Types.hs
src/Service/: Api.hs  BT.hs  Types.hs  VirginMedia.hs
test/Service/: BTSpec.hs  BTSpecData1.json
