name:                bbcheck
version:             0.1.0.0
synopsis:            Service for checking broadband offerings
description:         Please see README.md
homepage:            http://github.com/danpalmer/bbcheck#readme
license:             AllRightsReserved
author:              Dan Palmer
maintainer:          dan@danpalmer.me
copyright:           2016 Dan Palmer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bbcheck
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text
                     , bytestring
                     , mtl
                     , either
                     , transformers
                     , monad-control
                     , aeson
                     , aeson-pretty
                     , warp
                     , wai
                     , wai-cors
                     , wai-extra
                     , servant
                     , servant-server
                     , servant-jquery
                     , configurator
                     , directory
                     , filepath
  default-language:    Haskell2010

test-suite bbcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danpalmer/bbcheck
