name:                bbcheck
version:             0.1.0.0
synopsis:            Service for checking broadband offerings
description:         Please see README.md
homepage:            http://github.com/danpalmer/bbcheck#readme
license:             AllRightsReserved
author:              Dan Palmer
maintainer:          dan@danpalmer.me
copyright:           2016 Dan Palmer
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bbcheck
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  other-modules:       Server
                       Service.Api
                       Service.BT
                       Service.Types
                       Service.VirginMedia
                       Types
  build-depends:       base
                     , text
                     , bytestring
                     , mtl
                     , either
                     , transformers
                     , monad-control
                     , aeson
                     , aeson-pretty
                     , warp
                     , wai
                     , wai-cors
                     , wai-extra
                     , servant
                     , servant-server
                     , configurator
                     , directory
                     , filepath
                     , wreq
                     , lens
                     , lens-aeson
                     , split
                     , safe
                     , scalpel
                     , taggy
                     , taggy-lens
                     , regex-posix
  default-language:    Haskell2010

test-suite bbcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src
                     , test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     -- main executable dependencies
                     , text
                     , bytestring
                     , mtl
                     , either
                     , transformers
                     , monad-control
                     , aeson
                     , aeson-pretty
                     , warp
                     , wai
                     , wai-cors
                     , wai-extra
                     , servant
                     , servant-server
                     , configurator
                     , directory
                     , filepath
                     , wreq
                     , lens
                     , lens-aeson
                     , split
                     , safe
                     , scalpel
                     , taggy
                     , taggy-lens
                     , regex-posix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danpalmer/bbcheck
